--- a/journal.html
+++ b/journal.html
@@ -21,7 +21,7 @@
   <ul class="dropdown-menu">
     <li><a class="dropdown-item current" href="journal.html">Journal</a></li>
     <li><a class="dropdown-item" href="conference.html">Conference</a></li>
-  </ul>     
+  </ul></div>     
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -279,6 +279,7 @@
 </table>
 </body>
 </html>
+
 
 
 
