--- a/journal.html
+++ b/journal.html
@@ -15,13 +15,14 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-<div class="dropdown">
-  <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
-  </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item current" href="journal.html">Journal</a></li>
-    <li><a class="dropdown-item" href="conference.html">Conference</a></li>
-  </ul></div>     
+<div class="container mt-3">
+  <div class="dropdown">
+    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item current" href="journal.html">Journal</a></li>
+      <li><a class="dropdown-item" href="conference.html">Conference</a></li>
+  </ul></div></div>   
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -279,6 +280,7 @@
 </table>
 </body>
 </html>
+
 
 
 
