--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-<div class="dropdown">
-    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
-    </button>
+<div class="container mt-3">
+   <div class="dropdown">
+     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
+     </button>
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="journal.html">Journal</a></li>
       <li><a class="dropdown-item" href="conference.html">Conference</a></li>
-    </ul>     
+    </ul></div></div>       
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -232,6 +233,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
