--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
    <div class="dropdown">
      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
      </button>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="journal.html">Journal</a></li>
-      <li><a class="dropdown-item" href="conference.html">Conference</a></li>
-    </ul></div></div>       
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="journal.html">Journal</a></li>
+        <li><a class="dropdown-item" href="conference.html">Conference</a></li>
+      </ul>
+   </div>
+</div>       
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -233,6 +235,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
