--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
+<div class="menu-item">Publicaitons
 <div class="container mt-3">
    <div class="dropdown">
      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
@@ -48,7 +49,8 @@
         <li><a class="dropdown-item" href="conference.html">Conference</a></li>
       </ul>
    </div>
-</div>       
+</div>   
+</div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -235,6 +237,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
