--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 <div class="menu-item"><a href="index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
 <div class="content-container">  
-<div class="toggle-icon"></div> View More Earlier News 
-<div class="toggle-content">  
+Publications
 <p><ul>
 <a href="journal.html">Journal</a>
 <a href="conference.html">Conference</a>
@@ -233,6 +232,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
