--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Publications
 <a href="journal.html">Journal</a>
 <a href="conference.html">Conference</a>
 </ul></p>
-</div></div>  
+</div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -232,6 +232,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
