--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-<div class="content-container">  
-Publications
-<p><ul>
-<a href="journal.html">Journal</a>
-<a href="conference.html">Conference</a>
-</ul></p>
-</div>
+<div class="menu-item"><a href="#">Publications</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -232,6 +226,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
