--- a/other.html
+++ b/other.html
@@ -15,7 +15,7 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publications.html">Publications</a></div>
+<div class="menu-item"><a href="#">Publications</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html" class="current">Other</a></div>
@@ -35,3 +35,4 @@
 </table>
 </body>
 </html>
+
