--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-
 <div class="container mt-3">
     <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo"> <a href="#">Publications</a></button>
     <div id="demo" class="collapse">
-      <a href="journal.html">Journal</a>
-      <a href="conference.html">Conference</a>
+      <p><ul>
+      <li><p><a href="journal.html">Journal</a></p></li>
+      <li><p><a href="conference.html">Conference</a></p></li>
+      </ul></p>
     </div>
-</div>
-  
+</div> 
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -234,6 +234,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
