--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
 <div class="menu-item"><a href="index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
 <div class="container mt-3">
-    <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo"> <a href="#">Publications</a></button>
+    <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo"> Publications </button>
     <div id="demo" class="collapse">
-      <p><ul>
-      <li><p><a href="journal.html">Journal</a></p></li>
-      <li><p><a href="conference.html">Conference</a></p></li>
-      </ul></p>
+      <p>
+        <a href="journal.html">Journal</a>
+      </p>
+     <p>
+       <a href="conference.html">Conference</a>
+     </p>       
     </div>
 </div> 
 <div class="menu-item"><a href="patents.html">Patents</a></div>
@@ -234,6 +236,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
