--- a/index.html
+++ b/index.html
@@ -40,14 +40,10 @@
 <div class="menu-item"><a href="index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
 <div class="container mt-3">
-    <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo"> Publications </button>
-    <div id="demo" class="collapse">
-      <p>
-        <a href="journal.html">Journal</a>
-      </p>
-     <p>
-       <a href="conference.html">Conference</a>
-     </p>       
+     <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Publications</a>
+     <div id="demo" class="collapse">
+       <a href="journal.html">Journal</a> <br />
+       <a href="conference.html">Conference</a>     
     </div>
 </div> 
 <div class="menu-item"><a href="patents.html">Patents</a></div>
@@ -236,6 +232,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
