--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <div class="container mt-3">
      <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Publications</a>
      <div id="demo" class="collapse">
-       <a href="journal.html">Journal</a> <br />
-       <a href="conference.html">Conference</a>     
+       <li><p> <a href="journal.html">Journal</a> </p></li>
+       <li><p> <a href="conference.html">Conference</a> </p></li> 
     </div>
 </div> 
 <div class="menu-item"><a href="patents.html">Patents</a></div>
@@ -232,6 +232,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
