--- a/other.html
+++ b/other.html
@@ -15,7 +15,15 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="#">Publications</a></div>
+<div class="container mt-3">
+     <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Publications</a>
+     <div id="demo" class="collapse">
+       <p><ul>
+       <li><p> <a href="journal.html">Journal</a> </p></li>
+       <li><p> <a href="conference.html">Conference</a> </p></li> 
+       </ul></p>
+    </div>
+</div> 
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html" class="current">Other</a></div>
@@ -35,4 +43,5 @@
 </table>
 </body>
 </html>
+
 
