--- a/journal.html
+++ b/journal.html
@@ -16,13 +16,14 @@
 <div class="menu-item"><a href="index.html">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
 <div class="container mt-3">
-  <div class="dropdown">
-    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
-    </button>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item current" href="journal.html">Journal</a></li>
-      <li><a class="dropdown-item" href="conference.html">Conference</a></li>
-  </ul></div></div>   
+     <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Publications</a>
+     <div id="demo" class="collapse">
+       <p><ul>
+       <li><p> <a href="journal.html" class="current">Journal</a> </p></li>
+       <li><p> <a href="conference.html">Conference</a> </p></li> 
+       </ul></p>
+    </div>
+</div> 
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -280,6 +281,7 @@
 </table>
 </body>
 </html>
+
 
 
 
