--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.11</span>]  孔庆付获国家奖学金及小米奖学金（特等），金振洲获至善奖学金，谢晨洁获博士新生奖学金</p>
+</li>
 <li><p>[<span class="statement">2025.11</span>]  Yu Zhao's paper on pilot reuse for massive MIMO-OFDM was accepted by IEEE Transactions on Communications. (赵宇的关于大规模MIMO-OFDM导频复用的论文被IEEE Transactions on Communications录用)</p>
 </li>
 <li><p>[<span class="statement">2025.10</span>]  Tianxiang Xu's paper on multipoint channel charting was accepted by IEEE Communications Letters. (徐天祥的关于多点信道图谱的论文被IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/11223663">[link]</a></p>
@@ -87,13 +89,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Qingfu Kong's paper on integrated sensing and communications in cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Wireless Communications Letters. (孔庆付的关于大规模MIMO低轨星地协作通感一体化的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/11178240">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2025.08</span>]  Qingfu Kong's paper on cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Transactions on Vehicular Technology. (孔庆付的关于大规模MIMO低轨星地协作网络的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11143887">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2025.08</span>]  Qingfu Kong's paper on cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Transactions on Vehicular Technology. (孔庆付的关于大规模MIMO低轨星地协作网络的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11143887">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE GLOBECOM 2025. (潜梦羽的关于连续孔径阵列通信的论文被2025 IEEE GLOBECOM会议录用)</p>
 </li>
 <li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/11112605">[link]</a></p>
@@ -234,6 +236,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
