--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Email: lyou@seu.edu.cn <br />
 <p><ul>
 <li><p>[<span class="statement">2025.11</span>]  孔庆付获国家奖学金及小米奖学金（特等），金振洲获至善奖学金，谢晨洁获博士新生奖学金</p>
 </li>
-<li><p>[<span class="statement">2025.11</span>]  Yu Zhao's paper on pilot reuse for massive MIMO-OFDM was accepted by IEEE Transactions on Communications. (赵宇的关于大规模MIMO-OFDM导频复用的论文被IEEE Transactions on Communications录用)</p>
+<li><p>[<span class="statement">2025.11</span>]  Yu Zhao's paper on pilot reuse for massive MIMO-OFDM was accepted by IEEE Transactions on Communications. (赵宇的关于大规模MIMO-OFDM导频复用的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/11251314">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.10</span>]  Tianxiang Xu's paper on multipoint channel charting was accepted by IEEE Communications Letters. (徐天祥的关于多点信道图谱的论文被IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/11223663">[link]</a></p>
 </li>
@@ -236,6 +236,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
