--- a/journal.html
+++ b/journal.html
@@ -35,6 +35,8 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P17] H. Li, <b>L. You*</b>, H. Zhou, Y. Wang, F. Jiang, and X. Q. Gao, “Massive MIMO for multi-LEO satellite positioning,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025.</p>
+</li>
 <li><p>[P16] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11251314">Full Paper</a>]</p>
 </li>
 <li><p>[P15] C. Zhang, J. Wang, <b>L. You</b>, C.-B. Chae, and K.-K. Wong, “Fluid XL-MIMO: Multiuser antenna allocation exploiting the visibility region information,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11236402">Full Paper</a>]</p>
@@ -281,6 +283,7 @@
 </table>
 </body>
 </html>
+
 
 
 
