--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
-<li><p>[<span class="statement">2025.11</span>]  Haoyue Li's paper on massive MIMO multi-LEO satellite positioning was accepted by IEEE Wireless Communications Letters. (李昊玥的关于大规模MIMO多低轨卫星定位的论文被IEEE Wireless Communications Letters录用)</p>
+<li><p>[<span class="statement">2025.11</span>]  Haoyue Li's paper on massive MIMO multi-LEO satellite positioning was accepted by IEEE Wireless Communications Letters. (李昊玥的关于大规模MIMO多低轨卫星定位的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/11277304">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.11</span>]  孔庆付获国家奖学金及小米奖学金（特等），金振洲获至善奖学金，谢晨洁获博士新生奖学金</p>
 </li>
@@ -238,6 +238,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
