--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Xinyi Guo's paper on massive MIMO federated learning was accepted by IEEE Transactions on Vehicular Technology. (郭鑫怡的关于大规模MIMO联邦学习的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11192777">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2025.09</span>]  Li You was recommended as the Signal Processing for Communications Symposium Co-Chair of Globecom 2026. (尤力老师被遴选担任IEEE Globecom 2026 Signal Processing for Communications Symposium共同主席)</p>
+<li><p>[<span class="statement">2025.09</span>]  Li You was recommended as the Signal Processing for Communications Symposium Co-Chair of Globecom 2026. (尤力老师被遴选担任IEEE Globecom 2026 Signal Processing for Communications Symposium共同主席) <a href="https://globecom2026.ieee-globecom.org/technical-program-committee">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Li You was listed in the 2025 World's Top 2% Scientists. (尤力老师入选2025年全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/IAQWTkkCam2Dc9x7O_wsog">[link]</a></p>
 </li>
@@ -238,6 +238,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
