--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.12</span>]  Haohong Che's paper on channel charting was accepted by Chinese Journal of Electronics. (车昊鸿的关于信道图谱的论文被Chinese Journal of Electronics录用)</p>
+</li>
 <li><p>[<span class="statement">2025.11</span>]  Haoyue Li's paper on massive MIMO multi-LEO satellite positioning was accepted by IEEE Wireless Communications Letters. (李昊玥的关于大规模MIMO多低轨卫星定位的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/11277304">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.11</span>]  孔庆付获国家奖学金及小米奖学金（特等），金振洲获至善奖学金，谢晨洁获博士新生奖学金</p>
@@ -87,13 +89,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Li You was recommended as the Signal Processing for Communications Symposium Co-Chair of Globecom 2026. (尤力老师被遴选担任IEEE Globecom 2026 Signal Processing for Communications Symposium共同主席) <a href="https://globecom2026.ieee-globecom.org/technical-program-committee">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2025.09</span>]  Li You was listed in the 2025 World's Top 2% Scientists. (尤力老师入选2025年全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/IAQWTkkCam2Dc9x7O_wsog">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2025.09</span>]  Li You was listed in the 2025 World's Top 2% Scientists. (尤力老师入选2025年全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/IAQWTkkCam2Dc9x7O_wsog">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2025.09</span>]  Qingfu Kong's paper on integrated sensing and communications in cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Wireless Communications Letters. (孔庆付的关于大规模MIMO低轨星地协作通感一体化的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/11178240">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.08</span>]  Qingfu Kong's paper on cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Transactions on Vehicular Technology. (孔庆付的关于大规模MIMO低轨星地协作网络的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11143887">[link]</a></p>
@@ -238,6 +240,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
