--- a/journal.html
+++ b/journal.html
@@ -35,43 +35,45 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P17] H. Li, <b>L. You*</b>, H. Zhou, Y. Wang, F. Jiang, and X. Q. Gao, “Massive MIMO for multi-LEO satellite positioning,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11277304">Full Paper</a>]</p>
+<li><p>[P16] H. Che, <b>L. You*</b>, J. Wang, Z. Jin, C. Xie, and X. Q. Gao, “Channel charting-assisted pilot reuse for uplink XL-MIMO transmission,” <b><i>Chinese Journal of Electronics</i></b>, 2025.</p>
 </li>
-<li><p>[P16] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11251314">Full Paper</a>]</p>
+<li><p>[P15] H. Li, <b>L. You*</b>, H. Zhou, Y. Wang, F. Jiang, and X. Q. Gao, “Massive MIMO for multi-LEO satellite positioning,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11277304">Full Paper</a>]</p>
 </li>
-<li><p>[P15] C. Zhang, J. Wang, <b>L. You</b>, C.-B. Chae, and K.-K. Wong, “Fluid XL-MIMO: Multiuser antenna allocation exploiting the visibility region information,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11236402">Full Paper</a>]</p>
+<li><p>[P14] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11251314">Full Paper</a>]</p>
 </li>
-<li><p>[P14] T. Xu, <b>L. You*</b>, J. Wang, C. Xie, H. Che, C. Sun, and X. Q. Gao, “Efficient base station handover via multipoint channel charting-based SNR prediction,” <b><i>IEEE Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11223663">Full Paper</a>]</p>
+<li><p>[P13] C. Zhang, J. Wang, <b>L. You</b>, C.-B. Chae, and K.-K. Wong, “Fluid XL-MIMO: Multiuser antenna allocation exploiting the visibility region information,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11236402">Full Paper</a>]</p>
 </li>
-<li><p>[P13] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Channel fingerprint construction for massive MIMO: A deep conditional generative approach,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11220249">Full Paper</a>]</p>
+<li><p>[P12] T. Xu, <b>L. You*</b>, J. Wang, C. Xie, H. Che, C. Sun, and X. Q. Gao, “Efficient base station handover via multipoint channel charting-based SNR prediction,” <b><i>IEEE Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11223663">Full Paper</a>]</p>
 </li>
-<li><p>[P12] Z. Jin, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “EnvCDiff: Joint refinement of environmental information and channel fingerprints via conditional generative diffusion model,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11190081">Full Paper</a>]</p>
+<li><p>[P11] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Channel fingerprint construction for massive MIMO: A deep conditional generative approach,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11220249">Full Paper</a>]</p>
 </li>
-<li><p>[P11] X. Guo, <b>L. You*</b>, Z. Chen, X. Lu, A. Nallanathan, and X. Q. Gao, “Quantization-based federated learning in user-centric cell-free massive MIMO,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11192777">Full Paper</a>]</p>
+<li><p>[P10] Z. Jin, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “EnvCDiff: Joint refinement of environmental information and channel fingerprints via conditional generative diffusion model,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11190081">Full Paper</a>]</p>
 </li>
-<li><p>[P10] W. Zhu, Y. Zhang, Z. Xiang, D. Shi, <b>L. You</b>, and X. Q. Gao*, “Beam-structured precoding for network massive MIMO systems via Hamiltonian-based optimization,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
+<li><p>[P9] X. Guo, <b>L. You*</b>, Z. Chen, X. Lu, A. Nallanathan, and X. Q. Gao, “Quantization-based federated learning in user-centric cell-free massive MIMO,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11192777">Full Paper</a>]</p>
 </li>
-<li><p>[P9] Q. Kong, <b>L. You*</b>, H. Li, H. Zhou, Y. Wang, F. Zhu, and X. Q. Gao, “Cooperative precoding for integrated sensing and communication in massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11178240">Full Paper</a>]</p>
+<li><p>[P8] W. Zhu, Y. Zhang, Z. Xiang, D. Shi, <b>L. You</b>, and X. Q. Gao*, “Beam-structured precoding for network massive MIMO systems via Hamiltonian-based optimization,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
-<li><p>[P8] H. Yang, D. Wen, <b>L. You</b>, J. Wang, S. Wu, and Y. Shi, “MIMO over-the-air computation for device-edge collaborative inference,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11151698">Full Paper</a>]</p>
+<li><p>[P7] H. Yang, D. Wen, <b>L. You</b>, J. Wang, S. Wu, and Y. Shi, “MIMO over-the-air computation for device-edge collaborative inference,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11151698">Full Paper</a>]</p>
 </li>
-<li><p>[P7] Q. Kong, <b>L. You*</b>, H. Zhou, Y. Zhu, Y. Wang, and X. Q. Gao, “Robust precoding for cooperative massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11143887">Full Paper</a>]</p>
+<li><p>[P6] Q. Kong, <b>L. You*</b>, H. Zhou, Y. Zhu, Y. Wang, and X. Q. Gao, “Robust precoding for cooperative massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11143887">Full Paper</a>]</p>
 </li>
-<li><p>[P6] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
+<li><p>[P5] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
-<li><p>[P5] M. Qian, X. Mu, <b>L. You*</b>, H. Shin, and M. Matthaiou*, “Spectral efficiency analysis of near-field holographic MIMO over Ricean fading channels,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11112605">Full Paper</a>]</p>
+<li><p>[P4] M. Qian, X. Mu, <b>L. You*</b>, H. Shin, and M. Matthaiou*, “Spectral efficiency analysis of near-field holographic MIMO over Ricean fading channels,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11112605">Full Paper</a>]</p>
 </li>
-<li><p>[P4] K. Huang, <b>L. You*</b>, M. Qian, B. Jiang, and X. Q. Gao, “QoS-guaranteed MIMO SWIPT assisted by dynamic metasurface antenna,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11096022">Full Paper</a>]</p>
+<li><p>[P3] K. Huang, <b>L. You*</b>, M. Qian, B. Jiang, and X. Q. Gao, “QoS-guaranteed MIMO SWIPT assisted by dynamic metasurface antenna,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11096022">Full Paper</a>]</p>
 </li>
-<li><p>[P3] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11080242">Full Paper</a>]</p>
-</li>
-<li><p>[P2] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, W. K. New, and C.-B. Chae, “Capacity maximization of uplink with fluid antenna system at both ends,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11049889">Full Paper</a>]</p>
+<li><p>[P2] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11080242">Full Paper</a>]</p>
 </li>
 <li><p>[P1] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “Near-field channel estimation for XL-MIMO: A deep generative model guided by side information,” <b><i>IEEE Transactions on Cognitive Communications and Networking</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10981727">Full Paper</a>]</p>
 </li>
 </ul>
 <h4>Year 2025</h4>
 <ul>
+<li><p>[J94] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, W. K. New, and C.-B. Chae, “Capacity maximization of uplink with fluid antenna system at both ends,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 24, no. 12, pp. 10580-10593, Dec. 2025. [<a href="https://ieeexplore.ieee.org/document/11049889">Full Paper</a>]</p>
+</li>
+<li><p>[J93] Q. Kong, <b>L. You*</b>, H. Li, H. Zhou, Y. Wang, F. Zhu, and X. Q. Gao, “Cooperative precoding for integrated sensing and communication in massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Wireless Communications Letters</i></b>, vol. 14, no.12, pp. 4117-4121, Dec. 2025. [<a href="https://ieeexplore.ieee.org/document/11178240">Full Paper</a>]</p>
+</li>
 <li><p>[J92] J. Tang, <b>L. You*</b>, X. Gong, C. Xie, X. Q. Gao*, X.-G. Xia, and X. Shi, “Statistical CSI acquisition for multi-frequency massive MIMO systems,” <b><i>IEEE Transactions on Communications</i></b>, vol. 73, no.11, pp. 11798-11813, Nov. 2025. [<a href="https://ieeexplore.ieee.org/document/10993474">Full Paper</a>]</p>
 </li>
 <li><p>[J91] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “CF-CGN: Channel fingerprints extrapolation for multi-band massive MIMO transmission based on cycle-consistent generative networks,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, vol. 43, no. 11, pp. 3722-3736, Nov. 2025. [<a href="https://ieeexplore.ieee.org/document/11059941">Full Paper</a>]</p>
@@ -283,6 +285,7 @@
 </table>
 </body>
 </html>
+
 
 
 
