--- a/journal.html
+++ b/journal.html
@@ -35,33 +35,35 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P12] Z. Jin, <b>L. You*</b>, H. Zhou, Y. Wang, X. Liu, X. Gong, X. Q. Gao, D. W. K. Ng, and X.-G. Xia, “GDM4MMIMO: Generative diffusion models for massive MIMO communications,” <b><i>IEEE Communications Magazine</i></b>, 2025.</p>
+<li><p>[P9] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou*, “Continuous aperture array (CAPA)-based multi-group multicast communications,” <b><i>IEEE Transactions on Communications</i></b>, 2026.</p>
 </li>
-<li><p>[P11] H. Che, <b>L. You*</b>, J. Wang, Z. Jin, C. Xie, and X. Q. Gao, “Channel charting-assisted pilot reuse for uplink XL-MIMO transmission,” <b><i>Chinese Journal of Electronics</i></b>, 2025.</p>
+<li><p>[P8] Z. Jin, <b>L. You*</b>, H. Zhou, Y. Wang, X. Liu, X. Gong, X. Q. Gao, D. W. K. Ng, and X.-G. Xia, “GDM4MMIMO: Generative diffusion models for massive MIMO communications,” <b><i>IEEE Communications Magazine</i></b>, 2025.</p>
 </li>
-<li><p>[P10] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11251314">Full Paper</a>]</p>
+<li><p>[P7] H. Che, <b>L. You*</b>, J. Wang, Z. Jin, C. Xie, and X. Q. Gao, “Channel charting-assisted pilot reuse for uplink XL-MIMO transmission,” <b><i>Chinese Journal of Electronics</i></b>, 2025.</p>
 </li>
-<li><p>[P9] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Channel fingerprint construction for massive MIMO: A deep conditional generative approach,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11220249">Full Paper</a>]</p>
+<li><p>[P6] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11251314">Full Paper</a>]</p>
 </li>
-<li><p>[P8] Z. Jin, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “EnvCDiff: Joint refinement of environmental information and channel fingerprints via conditional generative diffusion model,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11190081">Full Paper</a>]</p>
+<li><p>[P5] Z. Jin, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “EnvCDiff: Joint refinement of environmental information and channel fingerprints via conditional generative diffusion model,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11190081">Full Paper</a>]</p>
 </li>
-<li><p>[P7] X. Guo, <b>L. You*</b>, Z. Chen, X. Lu, A. Nallanathan, and X. Q. Gao, “Quantization-based federated learning in user-centric cell-free massive MIMO,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11192777">Full Paper</a>]</p>
+<li><p>[P4] X. Guo, <b>L. You*</b>, Z. Chen, X. Lu, A. Nallanathan, and X. Q. Gao, “Quantization-based federated learning in user-centric cell-free massive MIMO,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11192777">Full Paper</a>]</p>
 </li>
-<li><p>[P6] W. Zhu, Y. Zhang, Z. Xiang, D. Shi, <b>L. You</b>, and X. Q. Gao*, “Beam-structured precoding for network massive MIMO systems via Hamiltonian-based optimization,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
+<li><p>[P3] W. Zhu, Y. Zhang, Z. Xiang, D. Shi, <b>L. You</b>, and X. Q. Gao*, “Beam-structured precoding for network massive MIMO systems via Hamiltonian-based optimization,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
-<li><p>[P5] H. Yang, D. Wen, <b>L. You</b>, J. Wang, S. Wu, and Y. Shi, “MIMO over-the-air computation for device-edge collaborative inference,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11151698">Full Paper</a>]</p>
+<li><p>[P2] Q. Kong, <b>L. You*</b>, H. Zhou, Y. Zhu, Y. Wang, and X. Q. Gao, “Robust precoding for cooperative massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11143887">Full Paper</a>]</p>
 </li>
-<li><p>[P4] Q. Kong, <b>L. You*</b>, H. Zhou, Y. Zhu, Y. Wang, and X. Q. Gao, “Robust precoding for cooperative massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11143887">Full Paper</a>]</p>
-</li>
-<li><p>[P3] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
-</li>
-<li><p>[P2] K. Huang, <b>L. You*</b>, M. Qian, B. Jiang, and X. Q. Gao, “QoS-guaranteed MIMO SWIPT assisted by dynamic metasurface antenna,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11096022">Full Paper</a>]</p>
-</li>
-<li><p>[P1] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11080242">Full Paper</a>]</p>
+<li><p>[P1] K. Huang, <b>L. You*</b>, M. Qian, B. Jiang, and X. Q. Gao, “QoS-guaranteed MIMO SWIPT assisted by dynamic metasurface antenna,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11096022">Full Paper</a>]</p>
 </li>
 </ul>  
 <h4>Year 2026</h4>
 <ul>
+<li><p>[J103] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Channel fingerprint construction for massive MIMO: A deep conditional generative approach,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 25, pp. 6096-6113, 2026. [<a href="https://ieeexplore.ieee.org/document/11220249">Full Paper</a>]</p>
+</li>
+<li><p>[J102] H. Yang, D. Wen, <b>L. You</b>, J. Wang, S. Wu, and Y. Shi, “MIMO over-the-air computation for device-edge collaborative inference,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 25, pp. 3363-3377, 2026. [<a href="https://ieeexplore.ieee.org/document/11151698">Full Paper</a>]</p>
+</li>
+<li><p>[J101] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 25, pp. 758-770, 2026. [<a href="https://ieeexplore.ieee.org/document/11080242">Full Paper</a>]</p>
+</li>
+<li><p>[J100] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, vol. 69, no. 2, Article ID: 121301, Jan. 2026.</p>
+</li>
 <li><p>[J99] H. Li, <b>L. You*</b>, H. Zhou, Y. Wang, F. Jiang, and X. Q. Gao*, “Massive MIMO for multi-LEO satellite positioning,” <b><i>IEEE Wireless Communications Letters</i></b>, vol. 15, pp. 785-789, 2026. [<a href="https://ieeexplore.ieee.org/document/11277304">Full Paper</a>]</p>
 </li>
 <li><p>[J98] C. Zhang, J. Wang, <b>L. You</b>, C.-B. Chae, and K.-K. Wong, “Fluid XL-MIMO: Multiuser antenna allocation exploiting the visibility region information,” <b><i>IEEE Wireless Communications Letters</i></b>, vol. 15, pp. 520-524, 2026. [<a href="https://ieeexplore.ieee.org/document/11236402">Full Paper</a>]</p>
@@ -290,6 +292,7 @@
 </table>
 </body>
 </html>
+
 
 
 
