--- a/journal.html
+++ b/journal.html
@@ -35,7 +35,7 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P9] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou*, “Continuous aperture array (CAPA)-based multi-group multicast communications,” <b><i>IEEE Transactions on Communications</i></b>, 2026.</p>
+<li><p>[P9] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Continuous aperture array (CAPA)-based multi-group multicast communications,” <b><i>IEEE Transactions on Communications</i></b>, 2026.</p>
 </li>
 <li><p>[P8] Z. Jin, <b>L. You*</b>, H. Zhou, Y. Wang, X. Liu, X. Gong, X. Q. Gao, D. W. K. Ng, and X.-G. Xia, “GDM4MMIMO: Generative diffusion models for massive MIMO communications,” <b><i>IEEE Communications Magazine</i></b>, 2025.</p>
 </li>
@@ -292,6 +292,7 @@
 </table>
 </body>
 </html>
+
 
 
 
