--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2026.01</span>]  Two papers were accepted by IEEE WCNC 2026. (课题组2篇论文被2026 IEEE WCNC会议录用)</p>
+</li>
 <li><p>[<span class="statement">2026.01</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE Transactions on Communications. (潜梦羽的关于连续孔径阵列通信的论文被IEEE Transactions on Communications录用)</p>
 </li>
 <li><p>[<span class="statement">2025.12</span>]  Zhenzhou Jin's paper on generative diffusion models for massive MIMO was accepted by IEEE Communications Magazine. (金振洲的关于生成式扩散模型在大规模MIMO中的应用的论文被IEEE Communications Magazine录用)</p>
@@ -87,13 +89,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.10</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11220249">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2025.09</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Vehicular Technology. (金振洲的关于信道图谱的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11190081">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2025.09</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Vehicular Technology. (金振洲的关于信道图谱的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11190081">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2025.09</span>]  Xinyi Guo's paper on massive MIMO federated learning was accepted by IEEE Transactions on Vehicular Technology. (郭鑫怡的关于大规模MIMO联邦学习的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11192777">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Li You was recommended as the Signal Processing for Communications Symposium Co-Chair of Globecom 2026. (尤力老师被遴选担任IEEE Globecom 2026 Signal Processing for Communications Symposium共同主席) <a href="https://globecom2026.ieee-globecom.org/technical-program-committee">[link]</a></p>
@@ -244,6 +246,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
