--- a/journal.html
+++ b/journal.html
@@ -35,13 +35,11 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P9] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Continuous aperture array (CAPA)-based multi-group multicast communications,” <b><i>IEEE Transactions on Communications</i></b>, 2026.</p>
+<li><p>[P8] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Continuous aperture array (CAPA)-based multi-group multicast communications,” <b><i>IEEE Transactions on Communications</i></b>, 2026.</p>
 </li>
-<li><p>[P8] Z. Jin, <b>L. You*</b>, H. Zhou, Y. Wang, X. Liu, X. Gong, X. Q. Gao, D. W. K. Ng, and X.-G. Xia, “GDM4MMIMO: Generative diffusion models for massive MIMO communications,” <b><i>IEEE Communications Magazine</i></b>, 2025.</p>
+<li><p>[P7] Z. Jin, <b>L. You*</b>, H. Zhou, Y. Wang, X. Liu, X. Gong, X. Q. Gao, D. W. K. Ng, and X.-G. Xia, “GDM4MMIMO: Generative diffusion models for massive MIMO communications,” <b><i>IEEE Communications Magazine</i></b>, 2025.</p>
 </li>
-<li><p>[P7] H. Che, <b>L. You*</b>, J. Wang, Z. Jin, C. Xie, and X. Q. Gao, “Channel charting-assisted pilot reuse for uplink XL-MIMO transmission,” <b><i>Chinese Journal of Electronics</i></b>, 2025.</p>
-</li>
-<li><p>[P6] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11251314">Full Paper</a>]</p>
+<li><p>[P6] H. Che, <b>L. You*</b>, J. Wang, Z. Jin, C. Xie, and X. Q. Gao, “Channel charting-assisted pilot reuse for uplink XL-MIMO transmission,” <b><i>Chinese Journal of Electronics</i></b>, 2025.</p>
 </li>
 <li><p>[P5] Z. Jin, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “EnvCDiff: Joint refinement of environmental information and channel fingerprints via conditional generative diffusion model,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11190081">Full Paper</a>]</p>
 </li>
@@ -56,6 +54,8 @@
 </ul>  
 <h4>Year 2026</h4>
 <ul>
+<li><p>[J104] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, vol. 745, pp. 1702-1716, 2026. [<a href="https://ieeexplore.ieee.org/document/11251314">Full Paper</a>]</p>
+</li>
 <li><p>[J103] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Channel fingerprint construction for massive MIMO: A deep conditional generative approach,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 25, pp. 6096-6113, 2026. [<a href="https://ieeexplore.ieee.org/document/11220249">Full Paper</a>]</p>
 </li>
 <li><p>[J102] H. Yang, D. Wen, <b>L. You</b>, J. Wang, S. Wu, and Y. Shi, “MIMO over-the-air computation for device-edge collaborative inference,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 25, pp. 3363-3377, 2026. [<a href="https://ieeexplore.ieee.org/document/11151698">Full Paper</a>]</p>
@@ -292,6 +292,7 @@
 </table>
 </body>
 </html>
+
 
 
 
